--- a/KartingSimulator/test/test.vcxproj
+++ b/KartingSimulator/test/test.vcxproj
@@ -78,6 +78,10 @@
     <IncludePath>..\IncludeDir\GLFW;..\IncludeDir\glm;..\IncludeDir\include;..\IncludeDir\stb-master;$(IncludePath)</IncludePath>
     <LibraryPath>..\LibrariesDir\lib-vc2019;..\LibrariesDir\Win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>C:\IA_anu2\G3D\folder\glew-2.1.0\include;C:\IA_anu2\G3D\folder\glfw-3.3.4.bin.WIN32\include\GLFW;C:\IA_anu2\G3D\folder\glm-stable\glm;C:\IA_anu2\G3D\folder\stb-master;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\IA_anu2\G3D\folder\glew-2.1.0\lib\Release\Win32;C:\IA_anu2\G3D\folder\glfw-3.3.4.bin.WIN32\lib-vc2019;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
