--- a/KartingSimulator/test/test.vcxproj
+++ b/KartingSimulator/test/test.vcxproj
@@ -147,6 +147,10 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Shader.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Floor.fs" />
+    <None Include="Floor.vs" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
