--- a/KartingSimulator/test/test.vcxproj.filters
+++ b/KartingSimulator/test/test.vcxproj.filters
@@ -33,4 +33,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Floor.vs">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="Floor.fs">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
