--- a/KartingSimulator/test/test.vcxproj
+++ b/KartingSimulator/test/test.vcxproj
@@ -151,6 +151,10 @@
   <ItemGroup>
     <None Include="Floor.fs" />
     <None Include="Floor.vs" />
+    <None Include="Lamp.fs" />
+    <None Include="Lamp.vs" />
+    <None Include="PhongLight.fs" />
+    <None Include="PhongLight.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
