--- a/KartingSimulator/test/test.vcxproj
+++ b/KartingSimulator/test/test.vcxproj
@@ -73,7 +73,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>..\IncludeDir\GLFW;..\IncludeDir\glm;..\IncludeDir\include;..\IncludeDir\stb-master;..\IncludeDir\assimp_include\assimp;$(IncludePath)</IncludePath>
     <LibraryPath>..\LibrariesDir\lib-vc2019;..\LibrariesDir\Win32;..\LibrariesDir\lib\x64;$(LibraryPath)</LibraryPath>
-    <ExternalIncludePath>E:\Facultate\G3D\Karting_OpenGL\KartingSimulator\test\IncludeDir\assimp_include;$(ExternalIncludePath)</ExternalIncludePath>
+    <ExternalIncludePath>IncludeDir\assimp_include;$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>..\IncludeDir\GLFW;..\IncludeDir\glm;..\IncludeDir\include;..\IncludeDir\stb-master;$(IncludePath)</IncludePath>
@@ -151,6 +151,10 @@
   <ItemGroup>
     <None Include="Floor.fs" />
     <None Include="Floor.vs" />
+    <None Include="Lamp.fs" />
+    <None Include="Lamp.vs" />
+    <None Include="PhongLight.fs" />
+    <None Include="PhongLight.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
