--- a/KartingSimulator/test/test.vcxproj.filters
+++ b/KartingSimulator/test/test.vcxproj.filters
@@ -40,5 +40,9 @@
     <None Include="Floor.fs">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="PhongLight.fs" />
+    <None Include="PhongLight.vs" />
+    <None Include="Lamp.fs" />
+    <None Include="Lamp.vs" />
   </ItemGroup>
 </Project>
