--- a/KartingSimulator/test/test.vcxproj.filters
+++ b/KartingSimulator/test/test.vcxproj.filters
@@ -68,5 +68,11 @@
     <None Include="Blending.fs">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="skybox.vs">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="skybox.fs">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
